RESOLVED FIXED29730
REGRESSION: webkit-transform scale no longer works properly in nightly build
https://bugs.webkit.org/show_bug.cgi?id=29730
Summary REGRESSION: webkit-transform scale no longer works properly in nightly build
Hanspeter Schaub
Reported 2009-09-24 18:16:00 PDT
I use the webkit-transform to scale elements when the mouse hovers over them. As of two days ago (9/22/09), the nightly webkit build no longer function properly here? The image should scale form its norm size to x1.1 the size. however, it now seems to scale from zero size to x1.1 size? Here is a test page to illustrate this issue. http://homepage.mac.com/hanspeterschaub/work/test.html I have this happen on other elements (some div's) that I use on my site. They all scale from 0 to the desired size, instead of from the current size as before. In Safari 4 this still work as expected.
Attachments
Patch, changelog, testcase (9.12 KB, patch)
2009-09-24 20:46 PDT, Simon Fraser (smfr)
mitz: review+
Mark Rowe (bdash)
Comment 1 2009-09-24 19:32:19 PDT
Simon Fraser (smfr)
Comment 2 2009-09-24 19:44:06 PDT
Regression from bug 29465 I guess.
Simon Fraser (smfr)
Comment 3 2009-09-24 20:46:41 PDT
Created attachment 40099 [details] Patch, changelog, testcase
Simon Fraser (smfr)
Comment 4 2009-09-24 21:02:14 PDT
Note You need to log in before you can comment on or make changes to this bug.