2009-09-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION: webkit-transform scale no longer works properly in nightly build
        https://bugs.webkit.org/show_bug.cgi?id=29730

        When the initial or final state of a scale animation does not specify a transform,
        use a default scale of 1, rather than zero.

        Test: compositing/transitions/scale-transition-no-start.html

        * platform/graphics/mac/GraphicsLayerCA.mm:
        (WebCore::getTransformFunctionValue):

Canonical link: https://commits.webkit.org/40309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48746 268f45cc-cd09-0410-ab3c-d52691b4dbfc